# goad_exercises

./: .gitignore  .lefthook.yml  README.md  pyproject.toml
demo/: abtesting.py
learning_goals/: outliers.md
notebooks/: 01_corona_modelling.ipynb  02_metropolis_hastings.ipynb  03_monte_carlo.ipynb  04_probabilistic_modelling.ipynb  05_abtesting.ipynb  inference.py
